# plover_eclipse_dictionary

./: MANIFEST.in  plover_eclipse_dictionary.py  setup.cfg  tox.ini
test/: test_eclipse_dict.py
