[metadata]
name = plover_eclipse_dictionary
version = 0.1.1
description = Eclipse dictionary file support for Plover
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Marnanel Thurman
author_email = marnanel@thurman.org.uk
license = GNU General Public License v2 or later (GPLv2+)
url = https://github.com/marnanel/plover_eclipse_dictionary
classifiers =
	Development Status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
keywords = plover plover_plugin

[options]
zip_safe = True
python_requires = >=3.6
install_requires =
	plover>=4.0.0.dev1
py_modules =
	plover_eclipse_dictionary

[options.extras_require]
test =
	pytest

[options.entry_points]
plover.dictionary =
	dix = plover_eclipse_dictionary:EclipseDictionary

# vim: commentstring=#\ %s list
